test/from-toml/invalid-duplicate-key.error
test/from-toml/invalid-duplicate-key.toml: TOML parse error: TOML parse error at line 2, column 1
  |
2 | name = "second"
  | ^
duplicate key `name` in document root

